# todo-rocket

./: .gitignore  Cargo.toml  README.md
migrations/2020-02-09-135303_create_todos/: up.sql
src/: main.rs  main_tests.rs  schema.rs  todo.rs
static/: index.html.tera
